Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.4.0
-
None
-
Win10 Qt6.4
-
-
254fc6a97 (dev), 351357c3a (6.9), 58815d650 (6.8), ed114ee3d (tqtc/lts-6.5)
Description
border-style: solid;
border-width: 2px;
border-radius: 32px;
border-color: transparent;
border-image: url(...) -10 0 0 -10; /* top right bottom left */
When i set a negative value in the first or last number of border-image Qt Designer crashes.
Also, the image is not being 'resized' correctly with negative values, and its causing glitches:
With image and negative values it 'zoom' the image correctly: